--- a/package.json
+++ b/package.json
@@ -4,7 +4,16 @@
   "description": "Convert css property to the camel case version",
   "main": "index.js",
   "scripts": {
-    "test": "npm test"
+    "test": "./node_modules/.bin/mocha test/index.js",
+    "coverage": "./node_modules/.bin/mocha test/index.js -r blanket -R mocha-term-cov-reporter"
+  },
+  "config": {
+    "blanket": {
+      "pattern": [
+        "index.js"
+      ],
+      "data-cover-never": "node_modules"
+    }
   },
   "repository": {
     "type": "git",
@@ -14,5 +23,10 @@
   "bugs": {
     "url": "https://github.com/orangemug/css-to-camelcase/issues"
   },
-  "homepage": "https://github.com/orangemug/css-to-camelcase"
+  "homepage": "https://github.com/orangemug/css-to-camelcase",
+  "devDependencies": {
+    "blanket": "^1.1.6",
+    "mocha": "^2.0.1",
+    "mocha-term-cov-reporter": "^0.2.0"
+  }
 }
